--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-slick": "^0.29.0",
+    "sharp": "^0.32.1",
     "slick-carousel": "^1.8.1",
     "typescript": "5.0.2"
   },
