--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "18.0.11",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "gray-matter": "^4.0.3",
     "next": "13.2.4",
     "normalize.css": "^8.0.1",
     "react": "18.2.0",
