--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-markdown": "^8.0.7",
     "react-slick": "^0.29.0",
     "sharp": "^0.32.1",
     "slick-carousel": "^1.8.1",
