--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "gray-matter": "^4.0.3",
     "next": "13.2.4",
     "normalize.css": "^8.0.1",
+    "photoswipe": "^5.3.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-markdown": "^8.0.7",
+    "react-photoswipe-gallery": "^2.2.7",
     "react-slick": "^0.29.0",
     "sharp": "^0.32.1",
     "slick-carousel": "^1.8.1",
