--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-config-next": "13.2.4",
     "gray-matter": "^4.0.3",
     "next": "13.2.4",
+    "next-themes": "^0.2.1",
     "normalize.css": "^8.0.1",
     "photoswipe": "^5.3.7",
     "react": "18.2.0",
