--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-markdown": "^8.0.7",
+    "react-photo-gallery": "^8.0.0",
     "react-photoswipe-gallery": "^2.2.7",
     "react-slick": "^0.29.0",
     "sharp": "^0.32.1",
