--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "13.2.4",
     "next-themes": "^0.2.1",
     "normalize.css": "^8.0.1",
+    "pigeon-maps": "^0.21.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
