--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,5 @@
 {
-  "semi": true,
+  "semi": false,
   "singleQuote": true,
   "tabWidth": 2,
   "trailingComma": "es5",
@@ -7,4 +7,4 @@
   "bracketSpacing": true,
   "arrowParens": "avoid",
   "endOfLine": "lf"
-} 
+}
